fixed gap

--- a/client/src/sass/TopArtists.scss
+++ b/client/src/sass/TopArtists.scss
@@ -63,7 +63,8 @@
         padding: 1rem;
         justify-content: center;
         align-items: center;
-        
+        gap: 2rem;
+
         .titles {
             flex-direction: column;
             gap: 1rem;
@@ -81,6 +82,7 @@
 
             .eachArtists {
                 font-size: .8rem;
+
                 img {
                     width: 8rem;
                     height: 8rem;
