--- a/client/src/sass/TopTracks.scss
+++ b/client/src/sass/TopTracks.scss
@@ -125,6 +125,7 @@
         padding: 2rem;
         align-items: center;
         justify-content: center;
+        gap: 2rem;
         .titles {
             flex-direction: column;
             gap: 1rem;
